--- a/upload_api/user_pool/template.yaml
+++ b/upload_api/user_pool/template.yaml
@@ -1,12 +1,45 @@
-AWSTemplateFormatVersion: 2010-09-09
+AWSTemplateFormatVersion : "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
+
+
 
 Parameters:
   SESEmailAddress:
     Type: String
     Default: arn:aws:ses:us-west-2:710339184759:identity/neuralstyleglacier@gmail.com
 
+  UserTableName:
+    Type: String
+    Default: Users
+
+  DynamoEndpoint:
+    Type: String
+    Default: cloud
+    AllowedValues:
+      - http://dynamo-local:8000
+      - cloud
+    Description: http://dynamo-local:8000, cloud
+
 Resources:
+  UserTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: !Ref UserTableName
+      AttributeDefinitions:
+        - AttributeName: "email"
+          AttributeType: "S"
+        - AttributeName: "username"
+          AttributeType: "S"
+
+      KeySchema:
+        - AttributeName: "email"
+          KeyType: "HASH"
+        - AttributeName: "username"
+          KeyType: "RANGE"
+      ProvisionedThroughput:
+        ReadCapacityUnits: "1"
+        WriteCapacityUnits: "1"
+
   SESRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -42,6 +75,9 @@ Resources:
         - email
       EmailConfiguration:
         EmailSendingAccount: COGNITO_DEFAULT
+      LambdaConfig:
+        PostConfirmation: !GetAtt VerifyConfirmedUserFunction.Arn
+
 
   UserPoolClient:
     Type: AWS::Cognito::UserPoolClient
@@ -52,6 +88,32 @@ Resources:
       ExplicitAuthFlows:
         - ADMIN_NO_SRP_AUTH
 
+  VerifyConfirmedUserFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Timeout: 10
+      FunctionName: VerifyConfirmedUserFunction
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref UserTableName
+      CodeUri: handlers/confirm_user
+      Handler: app.lambda_handler
+      Environment:
+        Variables:
+          dynamo_endpoint: !Ref DynamoEndpoint
+          user_table: !Ref UserTableName
+      Runtime: python3.7
+
+
+  UserPoolLambdaInvokePermission:
+    Type: AWS::Lambda::Permission
+    DependsOn:
+      - VerifyConfirmedUserFunction
+    Properties:
+      Action: lambda:invokeFunction
+      Principal: cognito-idp.amazonaws.com
+      FunctionName: VerifyConfirmedUserFunction
+      SourceArn: !GetAtt UserPool.Arn
 
 Outputs:
   UserPool:
@@ -70,4 +132,8 @@ Outputs:
     Value:
       Fn::GetAtt: UserPool.Arn
 
-
+  UserTableName:
+    Export:
+      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'UserTableName' ] ]
+    Value:
+      !Ref UserTableName
