The API test is passing but failing on CORS from front end..

--- a/upload_api/user_pool/package.yaml
+++ b/upload_api/user_pool/package.yaml
@@ -89,7 +89,11 @@ Resources:
       UserPoolId:
         Ref: UserPool
       ExplicitAuthFlows:
-      - ADMIN_NO_SRP_AUTH
+      - ALLOW_USER_PASSWORD_AUTH
+      - ALLOW_REFRESH_TOKEN_AUTH
+      - ALLOW_USER_SRP_AUTH
+      - ALLOW_CUSTOM_AUTH
+      - ALLOW_ADMIN_USER_PASSWORD_AUTH
   VerifyConfirmedUserFunction:
     Type: AWS::Serverless::Function
     Properties:
