--- a/upload_api/user_pool/template.yaml
+++ b/upload_api/user_pool/template.yaml
@@ -100,7 +100,12 @@ Resources:
       GenerateSecret: false
       UserPoolId: !Ref UserPool
       ExplicitAuthFlows:
-        - ADMIN_NO_SRP_AUTH
+        - ALLOW_USER_PASSWORD_AUTH
+        - ALLOW_REFRESH_TOKEN_AUTH
+        - ALLOW_USER_SRP_AUTH
+        - ALLOW_CUSTOM_AUTH
+        - ALLOW_ADMIN_USER_PASSWORD_AUTH
+#        - ADMIN_NO_SRP_AUTH
 
   VerifyConfirmedUserFunction:
     Type: AWS::Serverless::Function
